syntax = "proto3";

option go_package = "github.com/google/xtoproto/proto/recordtoproto";

package xtoproto;

// RecordProtoMapping is a schema for a set of records that is sufficient to
// output a .proto file with fields that map 1:1 with the record columns.
//
// This mapping should also contain enough information to automatically
// generate a parser for a row in the record that generates a message of the
// generated type.
//
// See go/csv-to-proto for usage instructions/details.
//
// TODO(reddaly): Figure out how to support non-1:1 mappings like lat, lng.
message RecordProtoMapping {
  string package_name = 1;
  string message_name = 2;

  // Details about 1:1 field mapping.
  repeated ColumnToFieldMapping column_to_field_mappings = 3;

  // Go-specific code generation options.
  GoOptions go_options = 4;

  // Extra proto fields that do not map to a single field.
  repeated FieldDefinition extra_field_definitions = 5;
}

// ColumnToFieldMapping describes a 1:1 relationship between a record column and
// a protobuf field.
message ColumnToFieldMapping {
  // The column number. 0 denotes the first column.
  int32 column_index = 1;

  // The name of the column in the record.
  string col_name = 2;

  // The name of the field in the proto.
  string proto_name = 3;

  // The protobuf type as a string. For example: "int32,"
  // "google.protobuf.Timestamp"
  string proto_type = 4;

  // The tag number to use for the proto field.
  int32 proto_tag = 5;

  // True if the field should not be parsed.
  bool ignored = 6;

  // List of proto files that need to be imported for this field.
  repeated string proto_imports = 7;

  string comment = 9;

  oneof parsing_info {
    TimeFormat time_format = 8;
    DurationFormat duration_format = 10;
  }
}

// FieldDefinition describes a single protobuf field.
//
// TODO(reddaly): Use this instead of ColumnToFieldMapping.
message FieldDefinition {
  // The name of the field in the proto.
  string proto_name = 1;

  // The protobuf type as a string. For example: "int32,"
  // "google.protobuf.Timestamp"
  string proto_type = 2;

  // The tag number to use for the proto field.
  int32 proto_tag = 3;

  // List of proto files that need to be imported for this field.
  repeated string proto_imports = 4;

  // Comment to include the field definition, excluding the leading slashes.
  string comment = 5;
}

// Details used to parse time fields.
message TimeFormat {
  // The layout string to use when parsing the field with Go's time library.
  string go_layout = 1;

  // The name used to load the time zone for parsing times. See
  // https://godoc.org/time#LoadLocation.
  string time_zone_name = 2;
}

// Details used to parse duration fields.
message DurationFormat {
  // Optional unit to be appended to the field when parsing with Go's time
  // library.
  string go_unit_suffix = 1;
}

message GoOptions {
  // Short name of the Go package.
  string go_package_name = 1;
  // Path to the go package with the generated proto.
  string proto_import = 2;
}
